[package]
name = "xtensa-toolchian-wrapper"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.147"

[[bin]]
name = "xtensa-toolchian-wrapper"
path = "main.rs"

[profile.release]
opt-level = "z"
strip = true
