[package]
name = "xtensa-toolchian-wrapper"
version = "1.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.5.0"
libc = "0.2.172"

[[bin]]
name = "xtensa-toolchian-wrapper"
path = "main.rs"

[profile.release]
opt-level = "z"
strip = true
